MainForm.cs: Now form is CustomForm inherting from BaseForm2, which has Bigger Titlebar, search bar in it. And related Changes to properly resize the controls accordingly.
FrmHome:
Now Instead of Dock, manually aligning and resizing the controls.
Hide the search Button instead handling search when user presses Enter Button on the Search bar.

--- a/Forms/MainForm.resx
+++ b/Forms/MainForm.resx
@@ -132,4 +132,71 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>31</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAHCAAAAEAIACoDgAAFgAAACgAAAAcAAAAQAAAAAEAIAAAAAAAAA4AAGAPAABgDwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACS/+GwAAAAAAAAAABy3/IgQr/uEFKv6QAAAAAAAA
+        AAAAMP4VACf+DQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABCv/oAUr/v0HK/cjAAAAAAAs/hcFK///BSv+mAAAAAAAAAAABSr+iQUq
+        /vUDK/9AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAQq/H8FK///BCv+dQAAAAAAH/8IBSv//wUr/oYAAAAAAAAAAAQr/tkFKv7pADj+CQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAk/gcEK/5qAAD/AQAA
+        AAAAKv4SBSv+8QUq/cUAAAAAAAAAAAUr/vYEK/51AAAAAAUo/iwFK///BCr+fQAAAAAAAAAABCn+NwUq
+        /mUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEK/6mBSv//wMr/4AAAAAAAAAAAAUr
+        /oYFK/78ACzzFwAAAAAEKv7jBSv+ZAAAAAAEK/57BSv+8gAt/xEAAAAACCv+HQUr/ucFK/7+BSv+LwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAyv+TAUr/vMFK/7+BSv+XgAAAAAAMP4VBSv+8wQq
+        /mcAAAAABCr+0QYr/lMAAAAABSr+ywUr/o0AAAAAAC7+CwQr/s4FK/79BCz+aAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFLP4uBCv+4QUr/vgEKfo+AAAAAAUq/ooFKv64AAAAAAUr
+        /sIDKf9EByf/IAUr/vcJL/4bAAD/AQQq/qwFK/75Bir/VQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABSz+XAAo/hMAAAAAAAAAAAAq/xgFK/7IBSv+7AYp/iUALP4XBSr98AAi/w8EK/6wBCv+NQQr
+        /nAEKv6dAAAAAAUr/oEFK/7zAyn+QwAAAAAAAAAAADP/BQQr/moGKv5UAAAAAAAAAAAAAAAACCv+HQUr
+        /v0FK/7zBSv+jAAq/xgAAAAAADj+CQQq/qkEK/7ZACr+EgUq/o8FK/5dBCr+nQcq9yQFKv/ABiv+KQUr
+        /lcFKv7qBCv+NQAAAAAAAP8BBSn+XAQq/twFK///BCv+zQAAAAAAAAAAAAAAAAYt/icEKv6nBSr+7gUr
+        //8FKv72BSr+kQkt/hwAAP8CBSr+hAUq/8AHKv4kBCr+qAUr/owFKP4sBCv9qgUt/zMEKv7WBiv+KQAA
+        /wEDKv5OBCr+0AUr//8FK/7xBCr+oQMr/kcAAAAAAAAAAAAAAAAAAAAAAAAAAAAz/wUDKf9EBSv+kgQr
+        /uEFK/74BCv+mQct/yIFLP5cBCr+nQUq/pAFK/2GBCr+bAYq/k4FKv64CCv+HQMr/kEFKv7FBSr+9gQq
+        /q4GKv9VADj+CQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8BBCz+NAUq
+        /oQEKv7QBCr+ogUs/mIEKv5nBij+JgUr/i8DKf+AAyv+TAUr/rcFK/23BSv+XQAk/g4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUr/bcEK/7OBSr+uAQq/qEFK/6NBCv+dQUr/l4DK/5GBSv+LwQp
+        /j0EKv94ACT+BwQs/jQALf8RBCj+OAQq/nEELP40BCj+OAYs/1AELP5oAyn/gAUq/pUEKv6sBSv+wgQr
+        /tsEKv5+AAAAAAAAAAAEK/7OBSv//wUr/v0FK/7xBCv+4QQr/tQFKv7EBSr+tQQq/qgEK/6aBCr+fgAA
+        AAAFKv6WAyv+QQUp/jEFK/6OBCv+mgQq/qgFKv65BSr+xwQq/tcFK/7mBSv++QUr//8FK///BSr+iQAA
+        AAAAAAAAACr/GAAq/hIAM8wFAAAAAAAAAAAAAAAAAAAAAAAf/wgDLP5LBCv+mgUq/pYAIv8PAAAAAAAA
+        AAAEK/47BCv/qgQr/p4DKf5KACr/BgAAAAAAAAAAAAAAAAAA/wEAJ/4NCSf+GgAt/xEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAJP4OBSv+WAQq/qgFKv7uBCv+pAUt/i0FKv6LBCv+aQAq/wwFKv8wBCr+fQUq
+        /l8EKf49BSr+vwUq/u4EKv6iAyv+TAAq/wYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACz+FwUq
+        /2YFK/63BSv++AUq/vsEKv6hBi3+JwAq6QwEK/6wBSr+WwQr/6oEK/51BCr8bQQq/msEK/6kBCr+fQAA
+        /wEDKf9EBSr+xgUr//8FKv7uBCr+oQMp/kkAKv8GAAAAAAAAAAAAAAAAACz+FwUq/vsFK///BSr++gQq
+        /Z0GKf4lAAAAAAAo/hkFKv/MBCr8fwUp/jEEK/6kBSv+gQQr/joEKv7QACL/DwUq/soEKv6cAD//BAAA
+        AAADKf5JBSr+ygUr//8FK///BSv+wQAAAAAAAAAAAAAAAAAAAAAFK/7BBSv+mAcn/yAAAAAAAAAAAAUp
+        /isEK/7gBCr9oQAA/wEEK/6mBSv+VwUr/pQDK/5BBCr9qQUq/2AJL/4bBCr+5AUq/bgAKv8MAAAAAAAA
+        /wEGLP9QBCr+0QQr/nwAAAAAAAAAAAAAAAAAAAAAAD//BAAAAAAAAAAAAAAAAAMr/kEFKv7uBSr+vgAq
+        /wYHJ/8gBSr+9QAn/g0EKv6oBiz+UQUq/loEKv7WAAD/AgQq/jYFKv72BCv+zwkn/hoAAAAAAAAAAAAA
+        /wIAH/8IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUr/l4FK/75BCv+1AAv/xAAAAAABSv+jgUr
+        /rcAAAAABSr+uwUq/mEAL/8QBSv++QYq/lQAAAAABSv+WAUr/v4EKv7iBS3+LQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAD/AQUq/oMFK/7+BSr+6Acu/iEAAAAAAC3/EQUr/vIEK/5qAAAAAAUq
+        /ssEKv5xAAAAAAUq/rgEK/3OAAAAAAAAAAAFK/6CBSv//wUr//ADKf9EAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAq/wYEKv7eBSr+9AQr/jUAAAAAAAAAAAQq/3gFK/79CSX+GwAAAAAEKv7dBSv+gQAA
+        AAAEKv5rBSv//wMs/koAAAAAAAD/AQQq/q0FK///BCr+eQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAyz+RQYp/k8AAAAAAAAAAAAf/wgEK/7mBSr/zAAAAAAAAAAABSr+7wUq/pAAAAAACCr/HgUr
+        /v4FKv7EAAAAAAAAAAAALv4LBSv+lAA//wQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAFKv5lBSv//wMp/YAAAAAAADP/BQUr/v4EK/+gAAAAAAAAAAAFKv7LBSv//wQs
+        /j8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAP8CBCr+2AUr//8FKP4yAAAAAAAo/hMFK///BCr+rgAAAAAAAAAABCr+fQUr//8FKv65AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAyz+SwUr
+        //8EK/7hAAD/AQAAAAAGKf4lBSv//wUq/r4AAAAAAAAAAAUr/i8FK///BSv++QAu/hYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAf/wgEKv6bBSv+lAAA
+        AAAAAAAABCn+NwUr//8EK/7NAAAAAAAAAAAAAP8BBSv+wwMq/kIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAf/wgAAAAAAAAAAAMs
+        /ksFK///BCr+3AAAAAAAAAAAAAAAAAAA/wEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADKv5CBSr/zAQr
+        /rAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP////D/sZ/w/xGP8P8R
+        j/DxGRnw8YkQ8PCJIfD4SAPwzABGMIIACDCAAAAw4AAA8PwAB/CAAAAQgAgAEI8GDhD4AAHwwAAAMIEA
+        CDDGAAQw3AADMPhIIfDgiTDw4YkQ8PMZGPD/EY/w/hGP8P4Rh/D+MY/w/7Hf8P/x//D////w
+</value>
+  </data>
 </root>
